added author id to quiz, update endpoints for retrieving quiz by tag and category